# code-review-assistant

./: .env.example  .gitignore  CHANGELOG.md  PUD.docx  README.md  pyproject.toml
backend/: pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0a8bcec7e19f_initial_migration.py  ad007ada922d_add_cached_report_column_to_review.py  d5324c7c8c24_add_recommendations_column_to_review_.py  dee4e9318e16_add_audit_logs_table.py  ec661d8ed003_add_project_submission_review_finding_.py
backend/app/: main.py
backend/app/ai/: base.py  ollama_provider.py  prompt_builder.py  schemas.py
backend/app/analyzers/: bandit_analyzer.py  base.py  orchestrator.py  pylint_analyzer.py  radon_analyzer.py  schemas.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/exports/: export_service.py  json_exporter.py  markdown_exporter.py  pdf_exporter.py
backend/app/models/: artifact.py  audit_log.py  enums.py  finding.py  metric.py  project.py  review.py  submission.py  user.py
backend/app/repositories/: artifact_repository.py  finding_repository.py  metric_repository.py  (+4 more)
backend/scripts/: create_db.py  seed_admin.py  seed_data.py
demo/sample-data/: v1_release_seed.py
demo/sample_data/: __init__.py  generator.py  seed.py
docs/api/: endpoints.md
docs/architecture/: database-design.md  system-overview.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
tests/integration/: test_health.py
(+69 files in other folders)
